@@ -12,7 +12,7 @@ Description: Selects all usable external modules
 Author: Patryk Cisek <patryk@debian.org>
 ---
 diff --git a/.config b/.config
-index a6cb13a..7e9d221 100644
+index 6538cb9..2ca7410 100644
 --- a/.config
 +++ b/.config
 @@ -92,7 +92,7 @@ module_growl_notify=n
@@ -81,7 +81,7 @@ index a6cb13a..7e9d221 100644
  
  # Description: PowerKadu
  # PL: PowerKadu
-@@ -402,11 +402,11 @@ module_powerkadu=n
+@@ -402,17 +402,17 @@ module_powerkadu=n
  # Description: Adds global hotkeys support to Kadu
  # PL: Dodaje do Kadu obsługę skrótów globalnych
  # Platform: Linux
@@ -95,6 +95,13 @@ index a6cb13a..7e9d221 100644
  # Platform: Linux, Mac OS X, Windows
  
  # Description: New ext_info module providing extended contact information support
+ # PL: Nowy moduł ext_info wprowadzający obsługę dodatkowych informacji o kontaktach
+ # Platform: Linux, Mac OS X, Windows
+-module_nextinfo=n
++module_nextinfo=m
+ 
+ ######################## MEDIAPLAYER ########################
+ 
 @@ -434,22 +434,22 @@ module_amarok2_mediaplayer=m
  # Description: Audacious support for mediaplayer
  # PL: Wsparcie dla Audacious w mediaplayer
@@ -152,16 +159,7 @@ index a6cb13a..7e9d221 100644
  
  ############################################# ICONS ###########################################################################
  # PL: ####################################### IKONY ###########################################################################
-@@ -513,7 +513,7 @@ icons_default=y
- icons_oxygen=y
- 
- # Description: Default theme from kadu 0.5.x
--icons_kadu05=n
-+icons_kadu05=y
- 
- # Description: Glass icon theme made by Mariusz Waluga
- icons_glass=y
-@@ -543,7 +543,7 @@ emoticons_tango=y
+@@ -537,7 +537,7 @@ emoticons_tango=y
  
  # Description: Old Gadu-Gadu 6.x emoticons
  # PL: Kompatybilne ze starą wersją Gadu-Gadu 6.x
@@ -170,7 +168,7 @@ index a6cb13a..7e9d221 100644
  
  ########################################### SOUNDS ############################################################################
  # PL: ##################################### DŹWIĘKI ###########################################################################
-@@ -561,14 +561,14 @@ emoticons_gg6_compatible=n
+@@ -555,14 +555,14 @@ emoticons_gg6_compatible=n
  # PL: Standardowy zestaw dźwięków dostępny razem ze źródłami Kadu
  sound_default=y
  
