@@ -2,8 +2,9 @@ kadu (0.6.6~beta15-1) unstable; urgency=low
 
   * New upstream release
   * Added code.google.com to debian/watch
+  * Refreshed debian/patches/02-.config.patch
 
- -- Patryk Cisek <patryk@debian.org>  Wed, 16 Feb 2011 15:55:37 +0100
+ -- Patryk Cisek <patryk@debian.org>  Wed, 16 Feb 2011 16:07:42 +0100
 
 kadu (0.6.6~beta15-1) unstable; urgency=low
 
